CHANGELOG:
v1.10 Fixes
   - Fix to C-level stack protection bug in delete.vertices that could cause crashes under some conditions
   - removed $<-.network assignment operator so that dispatch will occur via R internals. 
   - Fix stack protection overflow in set.edge.value. Also check for correct dimension on value argument for set.edge.value.
v1.9 Features & Fixes
  New Features
    - minor tweak to print.network to not show summary information for net.obs.period and .active attributes when called from network dynamic
    - add.vertices, add.edge, and add.edges have been converted to S3 methods
    - set.vertex.attributes and set.edge.attributes can now modify a list of on a network attributes with a single call
    - modified all of the set and add methods to remove the x$RisTooLazy?<-NULL copy-inducing kludge in favor of x<-duplicate(x) in the C version of the function. Seems to give moderate speed improvement for large networks
  Fixes
    - fixed a c-level bug in get.edge.ids that was giving bad values on undirected networks with loops.
    - fixed a bug where [<-.network assignment operator fails to add edge in non-directed loops case

v1.8 Fixes & Features
  New Features
    - now supports bipartite networks with zero-sized first mode. (biparite=0 no longer means the same thing as bipartite=FALSE, and is.bipartite() reflects this)
    - added vertex.lwd attribute to plot.network for controling line widths around vertices
    - added basic plotting for edge labels (new plot.network arguments: edge.label, edge.label.cex, edge.label.col)
    - added valid.eids function to return the ids of non-NULL edges in a network
    - added a loading.attributes man page with more examples of attaching vertex and edge attributes
    - print.network now lists edge attributes if there are less than 1k edges, otherwise a notice that attribute names are not shown (listing edge attributes is expensive)
  Bug Fixes